Attempting to fix the thin line between divs on mobile.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -64,6 +64,7 @@ section {
   z-index: -1;
   aspect-ratio: 960/150;
   width: 100%;
+  min-height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
